tests/gpu_struct/compile-fail/generic_struct.rs
use prgpu::gpu_struct;

#[gpu_struct]
pub struct Generic<T> {
    pub x: T,
}

fn main() {}
